--- a/buildout.cfg
+++ b/buildout.cfg
@@ -4,7 +4,6 @@ versions = versions
 unzip = true
 develop = 
   .
-#  plone.cachepurging
 
 parts +=
   varnish-build
@@ -13,23 +12,36 @@ parts +=
 
 [versions]
 Products.GenericSetup = 1.4.5
+plone.app.registry = 1.0b2
+zope.i18n = 3.4.0 
+zope.location = 3.4.0
+zope.site = 3.5.1
+zope.component =  3.5.1
+z3c.form = 2.3.3
+zope.schema = 3.6.4
+zope.proxy = 3.4.2
+plone.app.registry = 1.0b1
+plone.app.z3cform = 0.4.9
+plone.registry = 1.0b1
+plone.z3cform = 0.5.10
+zope.app.broken = 3.4.0
+zope.container = 3.7.0
+zope.security = 3.4.3
 
 [instance]
 eggs += 
   rt.purge
-#  plone.cachepurging
   plone.registry
   plone.app.registry
 zcml += 
   rt.purge
-#  plone.cachepurging
   plone.registry
   plone.app.registry
 products =
 
 [varnish-build]
 recipe = zc.recipe.cmmi
-url = http://downloads.sourceforge.net/varnish/varnish-2.0.5.tar.gz
+url = http://downloads.sourceforge.net/varnish/varnish-2.0.6.tar.gz
 
 [varnish-config]
 recipe = collective.recipe.template
