--- a/templates/public.vcl.in
+++ b/templates/public.vcl.in
@@ -3,6 +3,7 @@ backend default {
     .port = "8080";
 }
 
+# configure this carefully, to avoid 405 errors
 acl purge {
     "localhost";
 }
@@ -130,11 +131,12 @@ sub vcl_hash {
     set req.hash += req.url;
     set req.hash += req.http.host;
 
-    if (req.http.Accept-Encoding ~ "gzip") {
-        set req.hash += "gzip";
-    }
-    else if (req.http.Accept-Encoding ~ "deflate") {
-        set req.hash += "deflate";
-    }
+    # Those line are commented; they can raise some 404 errors when tryin purge
+    #if (req.http.Accept-Encoding ~ "gzip") {
+    #    set req.hash += "gzip";
+    #}
+    #else if (req.http.Accept-Encoding ~ "deflate") {
+    #    set req.hash += "deflate";
+    #}
 }
 
