--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,58 +1,30 @@
 [buildout]
-extends = buildout/plone3.cfg
+extends =
+    https://raw.githubusercontent.com/collective/buildout.plonetest/master/test-5.1.x.cfg
+#    https://raw.githubusercontent.com/collective/buildout.plonetest/master/test-5.x.cfg
+#    http://svn.plone.org/svn/collective/buildout/plonetest/test-4.x.cfg
+package-name = rt.purge
+package-extras = [test]
+# package-extras = [test,archetypes]
 versions = versions
-unzip = true
-develop = 
-  .
-
 parts +=
-  varnish-build
-  varnish
-  varnish-config
+    omelette
+    releaser
 
 [versions]
-Products.GenericSetup = 1.4.5
-plone.app.registry = 1.0b2
-zope.i18n = 3.4.0 
-zope.location = 3.4.0
-zope.site = 3.5.1
-zope.component =  3.5.1
-z3c.form = 2.3.3
-zope.schema = 3.6.4
-zope.proxy = 3.4.2
-plone.app.registry = 1.0b1
-plone.app.z3cform = 0.4.9
-plone.registry = 1.0b1
-plone.z3cform = 0.5.10
-zope.app.broken = 3.4.0
-zope.container = 3.7.0
-zope.security = 3.4.3
+setuptools =
+zc.buildout =
 
-[instance]
-eggs += 
-  rt.purge
-  plone.registry
-  plone.app.registry
-zcml += 
-  rt.purge
-  plone.registry
-  plone.app.registry
-products =
+[test]
+defaults = ['-s', '${buildout:package-name}', '--auto-color', '--auto-progress']
 
-[varnish-build]
-recipe = zc.recipe.cmmi
-url = http://downloads.sourceforge.net/varnish/varnish-2.0.6.tar.gz
+[omelette]
+recipe = collective.recipe.omelette
+eggs = ${instance:eggs}
 
-[varnish-config]
-recipe = collective.recipe.template
-input = ${buildout:directory}/templates/public.vcl.in
-output = ${buildout:directory}/etc/public.vcl
+[releaser]
+recipe = zc.recipe.egg
+eggs =
+    zest.releaser
+    pyroma
 
-[varnish]
-recipe = plone.recipe.varnish
-daemon = ${buildout:directory}/parts/varnish-build/sbin/varnishd
-bind = localhost:8081
-cache-size = 10M
-mode = foreground
-config = ${buildout:directory}/etc/public.vcl
-access_log = ${buildout:directory}/var/log/varnish_access.log
