Updated buildout for plone5.2

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,6 +1,7 @@
 [buildout]
 extends =
-    https://raw.githubusercontent.com/collective/buildout.plonetest/master/test-5.1.x.cfg
+    https://raw.githubusercontent.com/collective/buildout.plonetest/master/test-5.2.x.cfg
+#    https://raw.githubusercontent.com/collective/buildout.plonetest/master/test-5.1.x.cfg
 #    https://raw.githubusercontent.com/collective/buildout.plonetest/master/test-5.x.cfg
 #    http://svn.plone.org/svn/collective/buildout/plonetest/test-4.x.cfg
 package-name = rt.purge
@@ -10,6 +11,7 @@ versions = versions
 parts +=
     omelette
     releaser
+    plone-helper-scripts
 
 [versions]
 setuptools =
@@ -28,3 +30,12 @@ eggs =
     zest.releaser
     pyroma
 
+[plone-helper-scripts]
+recipe = zc.recipe.egg
+eggs =
+   Products.CMFPlone
+   ${instance:eggs}
+interpreter = zopepy
+scripts =
+   zopepy
+   plone-compile-resources
