--- a/pyproject.toml
+++ b/pyproject.toml
@@ -58,6 +58,9 @@ profile = "plone"
 
 [tool.black]
 target-version = ["py38"]
+force-exclude = """
+buildout
+"""
 
 ##
 # Add extra configuration options in .meta.toml:
